--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: "About"
 description: "Hey, this is BY."
-header-img: "img/head-img.jpeg"
+header-img: "img/post-bg-rwd.jpg"
 ---
 
 <!-- Language Selector -->
@@ -115,28 +115,28 @@ header-img: "img/head-img.jpeg"
 {% endif %}
 <!-- Gitalk end -->
 
- <!--&lt;!&ndash; disqus 评论框 start  &ndash;&gt;-->
-<!--{% if site.disqus.enable %}-->
+ <!-- disqus 评论框 start  -->
+{% if site.disqus.enable %}
 
-<!--<div class="comment">-->
-    <!--<div id="disqus_thread" class="disqus-thread">-->
-    <!--</div>-->
-<!--</div>-->
-<!--&lt;!&ndash; disqus 评论框 end &ndash;&gt;-->
+<div class="comment">
+    <div id="disqus_thread" class="disqus-thread">
+    </div>
+</div>
+<!-- disqus 评论框 end -->
 
-<!--&lt;!&ndash; disqus 公共JS代码 start (一个网页只需插入一次) &ndash;&gt;-->
-<!--<script type="text/javascript">-->
-    <!--/* * * CONFIGURATION VARIABLES * * */-->
-    <!--var disqus_shortname = "{{site.disqus.username}}";-->
-    <!--var disqus_identifier = "{{site.disqus.username}}/{{page.url}}";-->
-    <!--var disqus_url = "{{site.url}}{{page.url}}";-->
+<!-- disqus 公共JS代码 start (一个网页只需插入一次) -->
+<script type="text/javascript">
+    /* * * CONFIGURATION VARIABLES * * */
+    var disqus_shortname = "{{site.disqus.username}}";
+    var disqus_identifier = "{{site.disqus.username}}/{{page.url}}";
+    var disqus_url = "{{site.url}}{{page.url}}";
 
-    <!--(function() {-->
-        <!--var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;-->
-        <!--dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';-->
-        <!--(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);-->
-    <!--})();-->
-<!--</script>-->
+    (function() {
+        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+    })();
+</script>
 <!-- disqus 公共JS代码 end -->
 {% endif %}
 
