--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "Thinking will not overcome fear but action will."
+description: "机器世界，代码飞扬。上班下班，打卡如狼."
 ---
 
 {% for post in paginator.posts %}
